--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "systemt",
+  "name": "systemT",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "directories": {
-    "man": "man"
+    "man": "man",
+    "src": "src",
+    "tests": "tests"
   },
   "dependencies": {},
   "devDependencies": {
@@ -18,7 +20,7 @@
     "url": "git+https://github.com/shailpatels/systemT.git"
   },
   "author": "Shail Patel",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/shailpatels/systemT/issues"
   },
