--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jest-esm-transformer": "^1.0.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --config jest.config.js --coverage"
   },
   "repository": {
     "type": "git",
